test: fix icon alignment in Safari

--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -24,7 +24,8 @@ div.about__container {
 	}
 
 	.icons__wrapper {
-		display: block;
+		display: flex;
+		flex-direction: row;
 		height: 60px;
 		width: 100%;
 		align-content: center;
@@ -36,8 +37,7 @@ div.about__container {
 			margin-left: 5px;
 			margin-right: 5px;
 			fill: rgb(0, 0, 0);
-			max-width: 100%;
-			max-height: 100%;
+			height: 60px;
 			animation: floatdown 0.2s ease-in-out;
 			&:hover {
 				cursor: pointer;
